# F1_Spirit_remake

./: .gitignore  CMakeLists.txt  README.md
sources/: 2DCMC.cpp  CCar.cpp  CCar.h  CPlayer.cpp  CarEngineSound.cpp  EnemyCCar.cpp  F1SComputer.cpp  F1Shttp.cpp  F1Spirit-auxiliar.cpp  F1SpiritApp.cpp  F1SpiritGame.cpp  F1SpiritTrackViewer.cpp  GLTile.cpp  GLtile-f1.cpp  GameParameters.cpp  PlacedGLTile.cpp  PlayerCCar.cpp  RacingCCar.cpp  ReplayInfo.cpp  RoadPiece.cpp  RotatedGLTile.cpp  SDL_glutaux.cpp  auxiliar.cpp  keyboardstate.cpp  main.cpp  sound.cpp  sound.h  state_disclaimer.cpp  state_endsequence.cpp  state_gameoptions.cpp  state_gamestart.cpp  state_hiscore.cpp  state_konami.cpp  state_menu.cpp  state_menu_create_menu.cpp  state_menu_draw.cpp  state_race.cpp  state_race_result.cpp  state_replaymanager.cpp  state_title.cpp  (+3 more)
sources/compat/: SDL_net.h  sdl3_compat.h
tracks/: ~$durance.f1t
